the crud of types of documents and publishers was developed and the SeedBd was made

--- a/SGPB.Web/Views/Categories/Edit.cshtml
+++ b/SGPB.Web/Views/Categories/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SGPB.Web.Models.CategoryViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Categoría";
 }
 
 <header class="bg-primary py-5 mt-lg-5">
