--- a/SGPB.Web/Views/Editoriales/Edit.cshtml
+++ b/SGPB.Web/Views/Editoriales/Edit.cshtml
@@ -1,13 +1,13 @@
-﻿@model SGPB.Web.Models.CategoryViewModel
+﻿@model SGPB.Web.Data.Entities.Editorial
 
 @{
-    ViewData["Title"] = "Nueva Categoría";
+    ViewData["Title"] = "Editar Editorial";
 }
 
 <header class="bg-primary py-5 mt-lg-5">
     <div class="container px-4 px-lg-5 my-2">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Nueva Categoría</h1>
+            <h1 class="display-4 fw-bolder">Editar Editorial</h1>
         </div>
     </div>
 </header>
@@ -17,13 +17,14 @@
     <div class="container px-5 my-5 px-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-6">
-                <form asp-action="Create" enctype="multipart/form-data">
+                <form asp-action="Edit">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id" />
 
-                    <partial name="_Category" />
+                    <partial name="_Editorial" />
 
                     <div class="form-group d-flex flex-row justify-content-center alig-items-center">
-                        <input type="submit" value="Crear" class="btn btn-outline-primary mr-2" />
+                        <input type="submit" value="Editar" class="btn btn-outline-primary mr-2" />
                         <a asp-action="Index" class="btn btn-outline-success">Volver a la lista</a>
                     </div>
                 </form>
@@ -31,9 +32,10 @@
         </div>
     </div>
 </section>
+
 @section Scripts {
-    @{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
 }
 
