--- a/SGPB.Web/Views/Shared/_Layout.cshtml
+++ b/SGPB.Web/Views/Shared/_Layout.cshtml
@@ -37,10 +37,12 @@
                                 Configuraciones
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Tipo Documento</a>
+                                @*<a class="dropdown-item" href="#">Tipo Documento</a>*@
                                 <a class="dropdown-item" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Editoriales" asp-action="Index">Editoriales</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="DocumentTypes" asp-action="Index">Tipos de documentos</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                                @*<a class="dropdown-item" href="#">Something else here</a>*@
                             </div>
                         </li>
 
