--- a/SGPB.Web/Views/DocumentTypes/Create.cshtml
+++ b/SGPB.Web/Views/DocumentTypes/Create.cshtml
@@ -1,13 +1,13 @@
-﻿@model SGPB.Web.Models.CategoryViewModel
+﻿@model SGPB.Web.Data.Entities.DocumentType
 
 @{
-    ViewData["Title"] = "Nueva Categoría";
+    ViewData["Title"] = "Nuevo Tipo de documento";
 }
 
 <header class="bg-primary py-5 mt-lg-5">
     <div class="container px-4 px-lg-5 my-2">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Nueva Categoría</h1>
+            <h1 class="display-4 fw-bolder">Nuevo Tipo de documento</h1>
         </div>
     </div>
 </header>
@@ -17,10 +17,10 @@
     <div class="container px-5 my-5 px-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-6">
-                <form asp-action="Create" enctype="multipart/form-data">
+                <form asp-action="Create">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                    <partial name="_Category" />
+                    <partial name="_DocumentType" />
 
                     <div class="form-group d-flex flex-row justify-content-center alig-items-center">
                         <input type="submit" value="Crear" class="btn btn-outline-primary mr-2" />
