--- a/SGPB.Web/Views/Shared/_Layout.cshtml
+++ b/SGPB.Web/Views/Shared/_Layout.cshtml
@@ -26,38 +26,54 @@
                         <li class="nav-item active">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Usuarios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Prestamos de libros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Libros</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                                Configuraciones
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                @*<a class="dropdown-item" href="#">Tipo Documento</a>*@
-                                <a class="dropdown-item" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Editoriales" asp-action="Index">Editoriales</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="DocumentTypes" asp-action="Index">Tipos de documentos</a>
-                                <div class="dropdown-divider"></div>
-                                @*<a class="dropdown-item" href="#">Something else here</a>*@
-                            </div>
-                        </li>
-
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Usuarios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Prestamos de libros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Libros</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                                    Configuraciones
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    @*<a class="dropdown-item" href="#">Tipo Documento</a>*@
+                                    <a class="dropdown-item" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Editoriales" asp-action="Index">Editoriales</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="DocumentTypes" asp-action="Index">Tipos de documentos</a>
+                                    <div class="dropdown-divider"></div>
+                                    @*<a class="dropdown-item" href="#">Something else here</a>*@
+                                </div>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
                         </li>
                     </ul>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="ChangeUser">@User.Identity.Name</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Cerrar Sesión</a>
+                            </li>
+                        </ul>
+                    }
+                    else
+                    {
 
-                    <div class="my-2 my-lg-0">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Registrate</button>
-                        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Iniciar sesión</button>
-                    </div>
+                        <div class="my-2 my-lg-0">
+                            @*<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Registrate</button>*@
+                            <a class="btn btn-outline-primary my-2 my-sm-0" asp-area="" asp-controller="Account" asp-action="Login">Iniciar Sesión</a>
+                        </div>
+                    }
                 </div>
             </div>
         </nav>
