Se quito el modulo de registro de usuarios y se quito el footer

--- a/SGPB.Web/Views/Home/Index.cshtml
+++ b/SGPB.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "SGPB | Inicio";
 }
 
 <header class="bg-primary py-5 mt-lg-5">
@@ -15,7 +15,7 @@
         <h2 class="fw-bolder mb-2 text-center font-weight-bold text-primary"><i class="fa fa-book-bookmark"></i> Catálogo de Libros <i class="fa fa-book-bookmark"></i></h2>
     </div>
 </section>
-<section class="py-3" style='background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("https://i.pinimg.com/736x/18/b0/39/18b039640118f4f09dc4f780a2a88a98.jpg");  background-color: rgba(0,0,0,0.6);'>
+<section class="py-3">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
@@ -185,41 +185,6 @@
         </div>
     </div>
 </header>
-<section class="py-5 border-bottom">
-    <div class="container px-5 my-5 px-5">
-        <div class="text-center mb-5">
-            <h2 class="fw-bolder">Nuestros lectores</h2>
-            <p class="lead mb-0">A nuestros lectores les encanta aprender con nosotros</p>
-        </div>
-        <div class="row gx-5 justify-content-center">
-            <div class="col-lg-6">
-                <!-- Testimonial 1-->
-                <div class="card mb-4">
-                    <div class="card-body p-4">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0"><i class="bi bi-chat-right-quote-fill text-primary fs-1"></i></div>
-                            <div class="ms-4">
-                                <p class="mb-1">Gracias por armar un producto tan bueno. ¡Nos encantó aprender contigo, y te recomendaremos a otros!</p>
-                                <div class="small text-muted">- Fernando Pérez</div>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- Testimonial 2-->
-                <div class="card">
-                    <div class="card-body p-4">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0"><i class="bi bi-chat-right-quote-fill text-primary fs-1"></i></div>
-                            <div class="ms-4">
-                                <p class="mb-1">Ahora puedo gestionar los prestamos de mis libros favoritos de una manera fácil</p>
-                                <div class="small text-muted">Julian Londoño</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="py-5 bg-light">
     <div class="container px-4 px-lg-5 mt-5">
         <h2 class="fw-bolder mb-4">Últimos libros</h2>
