--- a/SGPB.Web/Views/Home/Index.cshtml
+++ b/SGPB.Web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
         <h2 class="fw-bolder mb-2 text-center font-weight-bold text-primary"><i class="fa fa-book-bookmark"></i> Catálogo de Libros <i class="fa fa-book-bookmark"></i></h2>
     </div>
 </section>
-<section class="py-3" style='background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("https://i.pinimg.com/736x/18/b0/39/18b039640118f4f09dc4f780a2a88a98.jpg");  background-color: rgba(0,0,0,0.6);'>
+<section class="py-3">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
