Se desarrollo mejoras en las consultas, en el diseño y se realizo la consulta para mostrar los libros en el home

--- a/SGPB.Web/Views/Books/Index.cshtml
+++ b/SGPB.Web/Views/Books/Index.cshtml
@@ -11,15 +11,14 @@
 <header class="bg-primary py-5 mt-lg-5">
     <div class="container px-4 px-lg-5 my-2">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Libros</h1>DF
-            SADFDSAFSFS
+            <h1 class="display-4 fw-bolder">Libros</h1>
         </div>
     </div>
 </header>
 <section class="py-3">
     <div class="card-footer p-4 pt-0 border-bottom-0 bg-transparent  border-bottom">
     </div>
-    <div class="container px-4 px-lg-5">
+    <div class="container px-4 px-lg-5" style="max-width: 80%;">
         <div class="row gx-4 gx-lg-5 row-cols-12 row-cols-sm-12 row-cols-md-12 row-cols-xl-12 justify-content-center">
             <div class="col-md-12">
 
