--- a/SGPB.Web/Views/Books/Details.cshtml
+++ b/SGPB.Web/Views/Books/Details.cshtml
@@ -16,7 +16,6 @@
     </div>
 </header>
 <section class="py-3">
-
     <div class="container px-4 px-lg-5">
 
         <div class="row gx-4 gx-lg-5 row-cols-12 row-cols-sm-12 row-cols-md-12 row-cols-xl-12 justify-content-center">
@@ -24,21 +23,16 @@
         <div class="row gx-4 gx-lg-5 row-cols-12 row-cols-sm-12 row-cols-md-12 row-cols-xl-12 justify-content-center">
 
             <div class="col-lg-8">
-
-                <!-- Featured blog post-->
                 <div class="card mb-4">
-                    <a href="#!"><img class="card-img-top" src="@Model.ImageFullPath" alt="..." style="width:100%;height:500px;max-width: 100%"></a>
+                    <a href="#!"><img class="card-img-top" src="@Model.ImageFullPath" alt="@Model.Name" style="width:100%;height:500px;max-width: 100%"></a>
                     <div class="card-body">
                         <div class="small text-muted">@Html.DisplayFor(model => model.EditionDate)</div>
                         <h2 class="card-title">@Html.DisplayFor(model => model.Serial) - @Html.DisplayFor(model => model.Name)</h2>
                         <p class="card-text">@Html.DisplayFor(model => model.Description)</p>
                     </div>
-                </div><!-- Nested row for non-featured blog posts-->
-
-
-            </div><!-- Side widgets-->
+                </div>
+            </div>
             <div class="col-lg-4">
-
                 <div class="card mb-4">
                     <div class="card-header">Categoria</div>
                     <div class="card-body">
@@ -88,74 +82,76 @@
                     </div>
                 </div>
             </div>
-
         </div>
-        <div class="row gx-4 gx-lg-5 row-cols-12 row-cols-sm-12 row-cols-md-12 row-cols-xl-12 justify-content-center">
-            <div class="col-md-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <div class="align-content-end mb-4 float-right">
-                            <a asp-action="AddImage" asp-route-id="@Model.Id" class="btn btn-outline-primary"><i class="fas fa-plus"></i> Agregar Imagen</a>
-                            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-warning">Editar Libro</a>
-                            <a asp-action="Index" class="btn btn-outline-success">Volver a la lista</a>
+        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+        {
+            <div class="row gx-4 gx-lg-5 row-cols-12 row-cols-sm-12 row-cols-md-12 row-cols-xl-12 justify-content-center">
+                <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <div class="align-content-end mb-4 float-right">
+                                <a asp-action="AddImage" asp-route-id="@Model.Id" class="btn btn-outline-primary"><i class="fas fa-plus"></i> Agregar Imagen</a>
+                                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-warning">Editar Libro</a>
+                                <a asp-action="Index" class="btn btn-outline-success">Volver a la lista</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="panel-body">
-                    <table class="table table-hover table-responsive table-striped" id="MyTable">
-                        <thead>
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.BookImages.FirstOrDefault().ImageFullPath)
-                                </th>
-                                <th>Eliminar</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model.BookImages)
-                            {
+                    <div class="panel-body">
+                        <table class="table table-hover table-responsive table-striped" id="MyTable">
+                            <thead>
                                 <tr>
-                                    <td>
-                                        <img src="@item.ImageFullPath" style="width:200px;height:200px;max-width: 100%; height: auto;" />
-                                    </td>
-                                    <td>
-                                        <button data-id="@item.Id" class="btn btn-outline-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="fas fa-trash"></i></button>
-                                    </td>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.BookImages.FirstOrDefault().ImageFullPath)
+                                    </th>
+                                    <th>Eliminar</th>
                                 </tr>
-                            }
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.BookImages)
+                                {
+                                    <tr>
+                                        <td>
+                                            <img src="@item.ImageFullPath" style="width:200px;height:200px;max-width: 100%; height: auto;" />
+                                        </td>
+                                        <td>
+                                            <button data-id="@item.Id" class="btn btn-outline-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="fas fa-trash"></i></button>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>
+        }
     </div>
-
 </section>
 <partial name="_DeleteDialog" />
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>    
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
 <script src="/js/deleteDialog.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#MyTable').DataTable({
-            "language": {
-                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json"
-            },
-           "columnDefs": [
-               { "width": "100%", "targets": 0 }
-           ],
-           "aLengthMenu": [
-               [10, 25, 50, 100, 200, -1],
-               [10, 25, 50, 100, 200, "Todos"]
-           ]
-       });
-
-            // Delete item
-            sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Books/DeleteImage/', false);
-        });
-    </script>
+<script type="text/javascript">
+     $(document).ready(function () {
+         $('#MyTable').DataTable({
+         "language": {
+                 "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json"
+         },
+        "columnDefs": [
+            { "width": "100%", "targets": 0 }
+        ],
+        "aLengthMenu": [
+            [10, 25, 50, 100, 200, -1],
+            [10, 25, 50, 100, 200, "Todos"]
+        ]
+    });
+         // Delete item
+         sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Books/DeleteImage/', false);
+     });
+</script>
 }
 
 
