--- a/SGPB.Web/Views/Categories/Index.cshtml
+++ b/SGPB.Web/Views/Categories/Index.cshtml
@@ -18,7 +18,7 @@
 <section class="py-3">
     <div class="card-footer p-4 pt-0 border-bottom-0 bg-transparent  border-bottom">
     </div>
-    <div class="container px-4 px-lg-5">
+    <div class="container px-4 px-lg-5" style="max-width: 80%;">
         <div class="row gx-4 gx-lg-5 row-cols-12 row-cols-sm-12 row-cols-md-12 row-cols-xl-12 justify-content-center">
             <div class="col-md-12">
 
