--- a/SGPB.Web/Views/DocumentTypes/Edit.cshtml
+++ b/SGPB.Web/Views/DocumentTypes/Edit.cshtml
@@ -14,7 +14,7 @@
 <section class="py-3">
     <div class="card-footer p-4 pt-0 border-bottom-0 bg-transparent  border-bottom">
     </div>
-    <div class="container px-5 my-5 px-5">
+    <div class="container px-5 my-5 px-5" style="max-width: 80%;">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-6">
                 <form asp-action="Edit">
