--- a/SGPB.Web/Views/Home/Privacy.cshtml
+++ b/SGPB.Web/Views/Home/Privacy.cshtml
@@ -1,6 +1,32 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Política de privacidad";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<header class="bg-primary py-5 mt-lg-5">
+    <div class="container px-4 px-lg-5 my-2">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Sistema de Bibliotecas</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Sistema de información de gestión y prestamos de libros</p>
+        </div>
+    </div>
+</header>
+<div class="jumbotron">
+    <div class="col-sm-8 mx-auto">
+        <h1>Política de privacidad</h1>
+       <p>El responsable del tratamiento de los datos personales del interesado te informa de que estos datos serán tratados de conformidad con lo dispuesto en las normativas vigentes en protección de datos personales, el Reglamento (UE) 2016/679 de 27 de abril de 2016 (RGPD) y la Ley Orgánica 3/2018, de 5 de diciembre, de Protección de Datos Personales y garantía de los derechos digitales, por lo que se le facilita la siguiente información del tratamiento:</p>
+        <p>En tanto en cuanto contamos con el consentimiento del interesado para el tratamiento de los datos personales, rige el apartado a) del punto 1) del artículo 6 del RGPD como base jurídica.</p>
+        <p>Si el tratamiento de los datos personales es necesario para la ejecución de un contrato con el interesado o de medidas precontractuales rige el apartado b) del punto 1) del artículo 6 del RGPD.
+
+                Si el tratamiento de los datos personales es consecuencia de una obligación legal por nuestra parte, nos remitimos al apartado c) del punto 1) del artículo 6 del RGPD.
+
+                Si el tratamiento de los datos personales tiene como objeto proteger los intereses vitales del interesado o de otra persona natural, nos basamos en el apartado d) del punto 1) del artículo 6 del RGPD.
+
+                Si el tratamiento de los datos personales es necesario para cumplir una tarea de interés público o en el ejercicio de una obligación pública nos remitimos al apartado e) del punto 1) del artículo 6 del RGPD.
+
+                Mientras que el tratamiento de los datos sea necesario para satisfacer los intereses legítimos del responsable o de un tercero sin poner en riesgo los intereses, los derechos o las libertades fundamentales del interesado, la base legal está establecida por el apartado f) del punto 1) del artículo 6 del RGPD.</p>
+        <p>
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-outline-primary">Volver a la página principal »</a>
+        </p>
+    </div>
+</div>
