se mejoro el diseño de las paginas de redireccion y se adecua la pagina de politicas de privacidad

--- a/SGPB.Web/Views/Home/Index.cshtml
+++ b/SGPB.Web/Views/Home/Index.cshtml
@@ -29,8 +29,7 @@
                         <div class="text-center">
                             <h5 class="fw-bolder">@item.Name</h5>
                             <div class="d-flex justify-content-center small text-warning mb-2">
-                            </div><span class="text-muted text-decoration-line-through">@item.Description.ToString().Substring(0, (item.Description.Length > 70) ? 70 : item.Description.Length )
-</span>
+                            </div><span class="text-muted text-decoration-line-through">@item.Description</span>
                         </div>
                     </div>
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
